[tool.poetry]
name = "crag"
version = "0.1.0"
description = ""
authors = ["Jay Shah <jayy.shah16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.13.5"
langchain = "^0.3.27"
langgraph = "^0.6.6"
langchainhub = "^0.1.21"
langchain-community = "^0.3.29"
tavily-python = "^0.7.11"
chromadb = "^1.0.20"
python-dotenv = "^1.1.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
